Fix wrong arg type in addLauncher method call

We expect a QVariant instead of a QUrl

Regression from 14d10c7a05be33f31214195369e069d40f547437

BUG: 449243


(cherry picked from commit 4f285e5d0b499e8d4b058a01c6e23c2437260de5)